--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     </a>
   </div>
 </main>
-<a class="fab_fullscreen" href="https://youtube.com/redirect?q=http://localhost:3000/">
+<a class="fab_fullscreen" href="https://youtube.com/redirect?q=https://ztittle.github.io/tezzy/">
   <img src="/icons/full-screen.svg" alt="Full Screen" width="100" height="100"/>
 </a>
 </html>
