--- a/index.html
+++ b/index.html
@@ -64,14 +64,14 @@
 <main class="main">
   <div class="grid">
     <a href="https://stadia.google.com/" class="card">
-      <img src="/icons/stadia.png" alt="Stadia" width="300" height="150" style="object-fit:'contain'"/>
+      <img src="icons/stadia.png" alt="Stadia" width="300" height="150" style="object-fit:'contain'"/>
     </a>    
     <a href="https://retrogames.cc/" class="card">
-      <img src="/icons/retro-games.png" alt="Retro Games" width="300" height="150" style="object-fit:'contain'"/>
+      <img src="icons/retro-games.png" alt="Retro Games" width="300" height="150" style="object-fit:'contain'"/>
     </a>
   </div>
 </main>
 <a class="fab_fullscreen" href="https://youtube.com/redirect?q=https://ztittle.github.io/tezzy/">
-  <img src="/icons/full-screen.svg" alt="Full Screen" width="100" height="100"/>
+  <img src="icons/full-screen.svg" alt="Full Screen" width="100" height="100"/>
 </a>
 </html>
