--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
 <main class="main">
   <div class="grid">
     <a href="https://stadia.google.com/" class="card">
-      <img src="icons/stadia.png" alt="Stadia" width="300" height="150" style="object-fit:'contain'"/>
+      <img src="icons/stadia.png" alt="Stadia" width="300" height="150" style="object-fit:contain"/>
     </a>    
     <a href="https://retrogames.cc/" class="card">
-      <img src="icons/retro-games.png" alt="Retro Games" width="300" height="150" style="object-fit:'contain'"/>
+      <img src="icons/retro-games.png" alt="Retro Games" width="300" height="150" style="object-fit:contain"/>
     </a>
   </div>
 </main>
