--- a/index.html
+++ b/index.html
@@ -65,9 +65,12 @@
   <div class="grid">
     <a href="https://stadia.google.com/" class="card">
       <img src="icons/stadia.png" alt="Stadia" width="300" height="150" style="object-fit:contain"/>
-    </a>    
+    </a>
     <a href="https://retrogames.cc/" class="card">
       <img src="icons/retro-games.png" alt="Retro Games" width="300" height="150" style="object-fit:contain"/>
+    </a>
+    <a href="https://google.com/" class="card">
+      <img src="/icons/google.png" alt="Google" width="300" height="150" style="object-fit:contain"/>
     </a>
   </div>
 </main>
