--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       <img src="icons/retro-games.png" alt="Retro Games" width="300" height="150" style="object-fit:contain"/>
     </a>
     <a href="https://google.com/" class="card">
-      <img src="/icons/google.png" alt="Google" width="300" height="150" style="object-fit:contain"/>
+      <img src="icons/google.png" alt="Google" width="300" height="150" style="object-fit:contain"/>
     </a>
   </div>
 </main>
