--- a/index.html
+++ b/index.html
@@ -72,6 +72,9 @@
     <a href="https://google.com/" class="card">
       <img src="icons/google.png" alt="Google" width="300" height="150" style="object-fit:contain"/>
     </a>
+    <a href="https://tv.youtube.com/" class="card">
+      <img src="icons/youtube-tv.png" alt="YouTube TV" width="300" height="150" style="object-fit:contain"/>
+    </a>
   </div>
 </main>
 <a class="fab_fullscreen" href="https://youtube.com/redirect?q=https://ztittle.github.io/tezzy/">
